--- a/README.Rmd
+++ b/README.Rmd
@@ -66,9 +66,16 @@ data <- XY_differences(G)
 names(data)
 ```
 
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
+The object `data` is a list that contains $X$ and $\matbf{y}$.  There is also a list of the team names appearing in the original data set.Now that the data has been sorted, we can analyze the game of interest.  For starters, we use `point_spread_ols` to estimate the Rams' margin of victory.
+```{r}
+point_spread_ols(data, "Rams", "Cardinals", a = 0.05)
+```
+Notice that since we set `a = 0.05`, we get the limits of a 95% confidence interval for $\tau_{\text{Rams}} - \tau_{\text{Cardinals}}+\eta$.  This is based on the $t$ statistic when we assume 
+$$
+\varepsilon_j\overset{\text{iid}}{\sim}N(0,\sigma^2).
+$$
+We can also use use this assumption to get win probabilities.
+```{r}
+probs <- winprob_ols(data, "Rams", "cardinals")
+probs
+```
