Fix error in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -66,7 +66,7 @@ data <- XY_differences(G)
 names(data)
 ```
 
-The object `data` is a list that contains $X$ and $\matbf{y}$.  There is also a list of the team names appearing in the original data set.Now that the data has been sorted, we can analyze the game of interest.  For starters, we use `point_spread_ols` to estimate the Rams' margin of victory.
+The object `data` is a list that contains $X$ and $\mathbf{y}$.  There is also a list of the team names appearing in the original data set.Now that the data has been sorted, we can analyze the game of interest.  For starters, we use `point_spread_ols` to estimate the Rams' margin of victory.
 ```{r}
 point_spread_ols(data, "Rams", "Cardinals", a = 0.05)
 ```
