Added week stop notes to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -45,6 +45,8 @@ tail(G)
 
 ```
 
+It is important to note that since there were 18 weeks of the 2021 regular season we set `wk_stop = 18`.  If the value of this parameter is larger than the number of weeks played, the function may produce an error.  A nice feature of Profootball Reference is that the playoff weeks are a continuation of  the week numbers used in the regular season.  This means for 2021, week 19 is the wild card round, week 20 is the divisional round, week 21 is the conference championships, etc.
+
 Next, we want to use linear regression to estimate the relative strengths of each team.  We can use a simple model, where $Y_j$ is the margin of victory for the home team in game $j$.  Then we have
 
 $$
